<resources>
    <string name="app_name">SimpostBar</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="welcome">Welcome</string>

    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="posts">Posts</string>


    <string name="find_posts">Find Posts</string>
    <string name="confirm">Confirm</string>
    <string name="admin">Admin</string>
    <string name="update_user">Update User</string>


    <string name="add_user">Add User</string>
    <string name="update_password">Update Password</string>
    <string name="delete_user">Delete User</string>

    <string name="add">Add</string>
    <string name="update">Update</string>


    <string name="added_successfully">Added Successfully</string>
    <string name="user_existed">The username already exist</string>

    <string name="no_data">No Data</string>


    <string name="login_successfully">Login Successfully</string>
    <string name="username_not_found">Username Not Found</string>
    <string name="password_incorrect">Username Not Found</string>
    <string name="database_access_fail">Database Access Fail</string>

    <string name="signature">Signature</string>

    <string name="message">Message</string>
    <string name="block">Block</string>
    <string name="follow">Follow</string>

    <string name="create_post">Create</string>

</resources>